--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -271,10 +271,12 @@ footer
 }
 #butlink a {
 	padding: 5px;
+	display: inline;
 	border: 1px solid #000;
 	margin-left: 20px;
 	background-color: #183935;
 	color: #fff;!important
+	font-size: 1.4em;
 	text-transform: uppercase;
 }
 
