--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -262,7 +262,7 @@ footer
 
 
 #butlink {
-	padding: 5px;
+	padding: .5em;
 	border: 1px solid #000;
 	margin-left: 20px;
 	background-color: #183935;
@@ -270,7 +270,7 @@ footer
 	text-transform: uppercase;
 }
 #butlink a {
-	padding: 5px;
+	padding: .5em;
 	display: inline;
 	border: 1px solid #000;
 	margin-left: 20px;
