Revert "updated text for welcome page"
This reverts commit ac15f67765eb5453d1e2659e1ed5e8e5e5ada0c1.

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -262,7 +262,7 @@ footer
 
 
 #butlink {
-	padding: .5em;
+	padding: 5px;
 	border: 1px solid #000;
 	margin-left: 20px;
 	background-color: #183935;
@@ -270,7 +270,7 @@ footer
 	text-transform: uppercase;
 }
 #butlink a {
-	padding: .5em;
+	padding: 5px;
 	display: inline;
 	border: 1px solid #000;
 	margin-left: 20px;
