welcome page cont
some issue around matching original PP design

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -203,9 +203,11 @@ nav li a:active {
 	font-size: 1.5em;
 	margin-bottom: 1em;
 	margin-top: 100px;
-	display: inline;
+	
   	padding: 1.25em; 
   	min-width: 480px;
+  	background: #f3f3f3;
+	border: 1px solid  #c9c9c9;  
 }
 
 #aside-img-welcome {
