--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -251,8 +251,10 @@ nav li a:active {
 	border: 1px solid  #c9c9c9;  
 }
 
-.clear-box {
+.plain-box {
  font-size: 1em;
+ border: 0;
+ background-color: #fff;
 }
 
 footer
@@ -269,7 +271,7 @@ footer
 
 
 #butlink {
-	padding: .5em;
+	padding: .8em;
 	border: 1px solid #000;
 	margin-left: 20px;
 	background-color: #183935;
