--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -201,7 +201,7 @@ nav li a:active {
 	display: block;
 	width: 50%;
 	font-size: 1.5em;
-	margin-bottom: 1em;
+	margin-bottom: ;
 	margin-top: 1em;
   	padding: 1.25em; 
   	background: #f3f3f3;
