--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -251,10 +251,18 @@ nav li a:active {
 	border: 1px solid  #c9c9c9;  
 }
 
-.plain-box {
- font-size: 1em;
- border: 0;
- background-color: #fff;
+.welcome-box {
+	font-size: 1em;
+	border: 0px;
+	background-color: #fff;
+ 	float: right;
+	display: block;
+	clear: right;
+	width: 50%;
+	margin-bottom: 1em;
+	margin-top: 1em;
+  	padding: 1.25em; 
+	border: 0px; 
 }
 
 footer
