--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -69,7 +69,7 @@
   <!--ARIA MARKER 'BANNER'-->
   <header role="banner">
         <a href="?authen_logout=1"><button class="button-right">log out</button></a>
-        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries. serving patrons.</p>
+        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
@@ -126,15 +126,11 @@
      <td valign="top">
 
       <div id="AVnotice">
-	<table>
-	  <tr>
-	    <td>
+
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle"/>
-	    </td><td>
+	    
 	      <p>Note that, while items of all types (DVD, CD, etc) may be listed, individual libraries may not allow interlibrary loan of audiovisual matierial at this time.</p>
-	    </td>
-	  </tr>
-	</table>
+
       </div>
 
       <div id="ranking" style="clear:left; display:none">
