login page updates 1
login to clear nav (put in previously but overridden?)
specificity for login header h2, previously not displaying colour #fff
some small tweak to get text to line up in inputs (may have to change
back in next commit)

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -88,7 +88,7 @@
     <!--***************ARIA MARKER 'SEARCH'***************-->
     <div id="search" role="search">
       <form id="searchForm" name="search">
-	<input id="query" type="text" size="50px" placeholder="Seach" value="<TMPL_VAR name='query'>">
+	<input id="query" type="text" size="50px" placeholder="Search" value="<TMPL_VAR name='query'>">
 	<input id="button" type="submit" value="Go" class="">
       </form>
     </div>
