--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -277,7 +277,6 @@ footer
 	margin-top: 1em;
 }
 
-
 #butlink {
 	padding: .8em;
 	border: 1px solid #000;
@@ -403,6 +402,7 @@ button {
 .login {
   width: 50%;
   margin: auto;
+  clear: all;
 }
 
 .login-content {
@@ -419,10 +419,15 @@ button {
 }
 
 .login-header {
-  color: #fff;
   background-color: #183935;
+  height: 70px;
+  line-height: 70px;
+}
+
+.login-header h2 {
+  color: #fff;
   font-size: 1em;
-  padding: .4em;
+  padding: .5em;
 }
 
 .login-footer {
@@ -478,6 +483,7 @@ div.login input {
 	border:1px solid #000000;
 	padding: .8em;
 }
+
 /*------------------------------------------------------*/
 .details {
     border: 1px solid #000000;
@@ -486,7 +492,6 @@ div.login input {
 }
 
 .secondary_info {
-    display: none;
 	background-color: #ffffba;
 	font-size: .7em;
 	color: #505050;
