removed field test, made login dimply as block to fix clear issue

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -400,6 +400,7 @@ button {
 /*------------login styles---------------------------------*/
 
 .login {
+  display: block;
   width: 50%;
   margin: auto;
   clear: all;
