--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -58,7 +58,7 @@
   <!--***************ARIA MARKER 'BANNER'***************-->
   <header role="banner">
         <a href="?authen_logout=1"><button class="button-right">log out</button></a>
-        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries, serving patrons.</p>
+        <a href="/"><img src="/img/fill-logo.png" class="fill-logo" alt="fill"></a><p class="fill-tagline">connecting libraries. serving patrons.</p>
   </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
