login page updates 2
try block display for login div again
targeting login title with new class, change from h2 to span (grey area
as to if it should or should not technically be a h2)

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -420,8 +420,11 @@ button {
 }
 
 .login-header {
-  color: #fff;
   background-color: #183935;
+}
+
+.login-header-title {
+  color: #fff;
   font-size: 1em;
   padding: .4em;
 }
