--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -17,7 +17,7 @@ $('document').ready(function(){
   <div class="login">
           <div class="login-content">
                     <div class="login-header">
-            <h2>Sign in to fILL</h2>
+            <span class="login-header-title">Sign in to fILL</span>
           </div>
             <fieldset name="login">
                     <label for="authen_username">User Name</label>
