increased padding and font size for login title added clear all for login div

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -402,6 +402,7 @@ button {
 
 .login {
   display: block;
+  clear: all;
   width: 50%;
   margin: auto;
 }
@@ -425,8 +426,8 @@ button {
 
 .login-header-title {
   color: #fff;
-  font-size: 1em;
-  padding: .4em;
+  font-size: 2em;
+  padding: 1em;
 }
 
 .login-footer {
