--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -12,7 +12,7 @@ $('document').ready(function(){
 });
 
 </script>
-
+<div><br /></div>
 <form action="/cgi-bin/public.cgi" method="post" name="loginform">
   <div class="login">
           <div class="login-content">
