--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -428,8 +428,8 @@ button {
   color: #fff;
   font-size: 2em;
   padding: 1em;
-  margin: 1em;
-  text-align: center;
+  line-height: 2em;
+  height: 2em;
 }
 
 .login-footer {
