Revert "added a clear div, still can’t get login to clear nav"
This reverts commit b924ff243cb283706b74961c101ce47ad264011f.

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -12,7 +12,7 @@ $('document').ready(function(){
 });
 
 </script>
-<div id="login-clear"><br /></div>
+<div><br /></div>
 <form action="/cgi-bin/public.cgi" method="post" name="loginform">
   <div class="login">
           <div class="login-content">
