--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -27,7 +27,7 @@ $('document').ready(function(){
             </fieldset>
             <fieldset>
                     <input type="submit" class="button-left" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
-                    <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield">Remember User Name<br>
+                    <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
 
             </fieldset>
           </div>
