moved styles from main login div to login content. Hopefully this will solve clearing issue

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -401,14 +401,14 @@ button {
 /*------------login styles---------------------------------*/
 
 .login {
-  display: block;
-  clear: all;
   width: 50%;
   margin: auto;
 }
 
 .login-content {
-
+  display: block;
+  clear: all;
+  margin-top: 20px;
   border: 2px solid #505050;
   background-color: #f3f3f3;
   font-size: 1em;
