--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -91,7 +91,7 @@ $('document').ready(function(){
     <br/>
     <h2>Registration form</h2>
     <form id="registration_form" action="/cgi-bin/register-patron.cgi" method="POST">
-      <table>
+      <table id="fill-table">
 	<tr>
 	  <td>Home library</td>
 	  <td><p id="home_library"></p></td>
