fixed tone box padding issue on contact us page further styling on fill-table, padding etc

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -373,6 +373,11 @@ button {
 	color: #505050;
 	padding: .5em;
 }
+
+#fill-table td {
+	padding: 1em;
+}
+
 #fill-table td, #fill-table th {
   border: 1px solid #fff;
 }
