--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -366,6 +366,7 @@ button {
 #fill-table {
   	border-collapse: collapse;
   	width: 70%;
+  	margin: 1em;
 	background: #f0ead3;
 	border: 2px solid #505050;
 	color: #505050;
