Revert "added margin to fill-table"
This reverts commit 027754e7b42a564255f8d812443f557345e620ca.

--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -113,7 +113,7 @@ $('document').ready(function(){
         <h4>Current borrowing</h4>
       <div class="dataTable_wrapper">
 
-      	<table id="fill-table" class="display">
+      	<table id="datatable_borrowing" class="display">
       	  <thead>
       	    <tr>
       	      <th></th><th>cid</th><th>Title</th><th>Author</th><th>Status</th><th>Status Updated</th><th> </th>
