aside img change

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -218,6 +218,11 @@ nav li a:active {
   	padding: ; 
 }
 
+#aside-img-welcome img {
+	margin: 0;
+  	padding: 0; 
+}
+
 #aside-img-right
 {
 	
@@ -366,6 +371,7 @@ button {
 #fill-table {
   	border-collapse: collapse;
   	width: 70%;
+  	margin: 1em;
 	background: #f0ead3;
 	border: 2px solid #505050;
 	color: #505050;
