--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -68,7 +68,7 @@
       <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQh</a></li>
+      <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
     </ul>
   </nav>
