corrected div id

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -34,7 +34,7 @@
 
 </div><!--main-info-left-->
 
-	<div id="aside-image-right">
+	<div id="aside-img-right">
       <img src='/img/faq.jpg' alt="picture of a library card catalogue"/>
       <p class="short_instruction"></p>
 	</div>
