--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -79,7 +79,7 @@
       <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
-      <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQs</a></li>
+      <li><a href="/cgi-bin/public.cgi?rm=faq_form">faq</a></li>
       <li><a href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
     </ul>
   </nav>
