--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -498,13 +498,13 @@ div.login input {
 	padding: .8em;
 }
 /*------------------------------------------------------*/
-.details #detTable {
+#main.tone-box .details #detTable {
     border: 1px solid #000000;
     border-radius: 10px;
     padding: 1em;
 }
 
-.details table.secondary_info {
+#main.tone-box .details table.secondary_info {
     display: ;
 	background-color: #ffffba;
 	font-size: .7em;
