--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -7,18 +7,26 @@
 <div id="container">
 <div id="main-info-left" class="tone-box">
 
+<a href="#q1">How long does it take to get something delivered?</a>
+<a href="#q2">Where does the requested item come from?</a>
+<a href="#q3">Why can&rsquo;t it just get sent to my home?</a>
+<a href="#q4">Why is it called fILL?</a>
+<a href="#q5">Can I renew my items?</a>
+<a href="#q6">How many items can I request at one time?</a>
+<a href="#q7">What happens if the item I want is already on loan?</a>
+<a href="#q8">Do I pay late fines at my local public library or to library the item came from</a>
 
-<h3>How long does it take to get something delivered?</h3>
+<a name="q1"><h3>How long does it take to get something delivered?</h3></a>
 	<p>Wait times can vary.  Items already on loan can take longer to be delivered.  Typically, it takes between a week to  two weeks for an item to be delivered.  And some items may never be delivered because not all libraries participate in the inter-library loan program.</p>
 
-<h3>Where does the requested item come from?</h3>
+<a name="q2"<h3>Where does the requested item come from?</h3></a>
 	<p>The item that you have requested could come from any public library in Manitoba.</p>
 
-<h3>Why can’t it just get sent to my home?</h3>
+<a name="q3"<h3>Why can&rsquo;t it just get sent to my home?</h3></a>
 	<p>Your library membership entitles you to borrow from your local library only.  Your local library can loan you materials from another library, as they have borrowed on their behalf.</p>
 
 <h3>Why is it called fILL?</h3>
-	<p>It is called fILL because with the software we are able to easily fill your inter-library loan request.</p>
+	<p>It is called fILL because with the software we are able to easily <strong>fill</strong> your inter-library loan request.</p>
 
 <h3>Can I renew my items?</h3>
 	<p>You will not be able to review the item directly. You can make a renewal request at your library and they will make the request from the lender and notify you.  It is a local policy decision to allow inter-library loan items to be renewed.</p>
