--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -6,7 +6,7 @@
 
 <div id="container">
 <div id="main-info-left" class="tone-box">
-
+<h2>FAQs</h2>
 <ul>
 	<li><a href="#q1"><h3>How long does it take to get something delivered?</h3></a></li>
 	<li><a href="#q2"><h3>Where does the requested item come from?</h3></a></li>
@@ -18,37 +18,38 @@
 	<li><a href="#q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a></li>
 </ul>
 
-<a name="q1"><h3>How long does it take to get something delivered?</h3></a></li>
+<a name="q1"><h3>How long does it take to get something delivered?</h3></a>
 	<p>Wait times can vary.  Items already on loan can take longer to be delivered.  Typically, it takes between a week to  two weeks for an item to be delivered.  And some items may never be delivered because not all libraries participate in the inter-library loan program.</p>
 
-<a name="q2"<h3>Where does the requested item come from?</h3></a></li>
+<a name="q2"<h3>Where does the requested item come from?</h3></a>
 	<p>The item that you have requested could come from any public library in Manitoba.</p>
 
-<a name="q3"<h3>Why can&rsquo;t it just get sent to my home?</h3></a></li>
+<a name="q3"<h3>Why can&rsquo;t it just get sent to my home?</h3></a>
 	<p>Your library membership entitles you to borrow from your local library only.  Your local library can loan you materials from another library, as they have borrowed on their behalf.</p>
 
-<h3>Why is it called fILL?</h3>
+<a name="q4"><h3>Why is it called fILL?</h3></a>
 	<p>It is called fILL because with the software we are able to easily <strong>fill</strong> your inter-library loan request.</p>
 
-<h3>Can I renew my items?</h3>
+<a name="q5"><h3>Can I renew my items?</h3></a>
 	<p>You will not be able to review the item directly. You can make a renewal request at your library and they will make the request from the lender and notify you.  It is a local policy decision to allow inter-library loan items to be renewed.</p>
 
-<h3>How many items can I request at one time?</h3>
+<a name="q6"><h3>How many items can I request at one time?</h3></a>
 	<p>The maximum number of items a patron can take out at  one time  is up to your public library.</p>
 
-<h3>What happens if the item I want is already on loan?</h3>
+<a name="q7"><h3>What happens if the item I want is already on loan?</h3></a>
 	<p>Your local library will place a hold on the item, after it is returned, it will be delivered to your library for pick up.</p>
 
-<h3>Do I pay late fines at my local public library or to library the item came from</h3>
+<a name="q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a>
 	<p>You pay your late fees at your local public library.</p>
 
 </div><!--main-info-left-->
 
 	<div id="aside-img-right">
-      <img src='/img/faq.jpg' alt="picture of a library card catalogue"/>
+      <img src='/img/faq.jpg' alt="Well dressed brown haired girl leaning against wall reading a book"/>
       <p class="short_instruction"></p>
 	</div>
-</div>
+
+</div><!--div id container -->
 <!--
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
