--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -21,10 +21,10 @@
 <a name="q1"><h3>How long does it take to get something delivered?</h3></a>
 	<p>Wait times can vary.  Items already on loan can take longer to be delivered.  Typically, it takes between a week to  two weeks for an item to be delivered.  And some items may never be delivered because not all libraries participate in the inter-library loan program.</p>
 
-<a name="q2"<h3>Where does the requested item come from?</h3></a>
+<a name="q2"><h3>Where does the requested item come from?</h3></a>
 	<p>The item that you have requested could come from any public library in Manitoba.</p>
 
-<a name="q3"<h3>Why can&rsquo;t it just get sent to my home?</h3></a>
+<a name="q3"><h3>Why can&rsquo;t it just get sent to my home?</h3></a>
 	<p>Your library membership entitles you to borrow from your local library only.  Your local library can loan you materials from another library, as they have borrowed on their behalf.</p>
 
 <a name="q4"><h3>Why is it called fILL?</h3></a>
