--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -76,7 +76,7 @@ $('document').ready(function(){
       <tr><th scope="row">fILL username</th><td><TMPL_VAR name="username"></td></tr>
       <tr><th scope="row">Home library</th><td><TMPL_VAR name="library"></td></tr>
       <tr><th scope="row">Account status</th><td><TMPL_VAR name="is_enabled"></td></tr>
-      <tr><th scope="row">fILL Patron ID#</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
+      <tr><th scope="row">fILL Patron Identification</th><td id="pid"><TMPL_VAR name="pid"></td></tr>
     </table>
   
   <a id="showChangePassButton" class="button-left" href="javascript:void(0)" onclick="toggleChangePassDiv()">Change password</a>
