sign up form don't display td

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -115,7 +115,7 @@ $('document').ready(function(){
           <tr>
         	  <th>Username</th>
         	  <td><input type="text" id="username" name="patron_username" size=30 maxlength=50></td>
-        	  <td><p id="username_message"></p></td>
+        	  <td style="display:none"><p id="username_message"></p></td>
         	</tr>
           <tr>
         	  <th>Password</th>
