--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -114,8 +114,7 @@ $('document').ready(function(){
         	</tr>
           <tr>
         	  <th>Username</th>
-        	  <td><input type="text" id="username" name="patron_username" size=30 maxlength=50></td>
-        	  <td style="display:none"><p id="username_message"></p></td>
+        	  <td><input type="text" id="username" name="patron_username" size=30 maxlength=50><br><p id="username_message"></p></td>
         	</tr>
           <tr>
         	  <th>Password</th>
