--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -369,7 +369,7 @@ button {
   	border-collapse: collapse;
   	width: 70%;
   	margin: 1em;
-	background: #f0ead3;
+	background: #f3f3f3;
 	border: 2px solid #505050;
 	color: #505050;
 	padding: .5em;
