lighter box introduced

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -250,6 +250,10 @@ nav li a:active {
 	border-bottom: 3px solid  #c9c9c9;  
 }
 
+.lighter-box {
+	opacity: 0.5;
+}
+
 .welcome-box {
 	font-size: 1em;
 	border: 0px;
