--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -18,6 +18,8 @@
 	<li><a href="#q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a></li>
 </ul>
 <hr><br>
+
+<div class="lighter-box"
 <a name="q1"><h3>How long does it take to get something delivered?</h3></a>
 	<p>Wait times can vary.  Items already on loan can take longer to be delivered.  Typically, it takes between a week to  two weeks for an item to be delivered.  And some items may never be delivered because not all libraries participate in the inter-library loan program.</p>
 
@@ -41,6 +43,7 @@
 
 <a name="q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a>
 	<p>You pay your late fees at your local public library.</p>
+</div>
 
 </div><!--main-info-left-->
 
