border radius on nag trial

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -99,14 +99,15 @@ nav ul li
 
 nav li a
 {
-	margin: 0px;
+	margin-right: 10px;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 3px 3px 0px 0px;
+	border-radius: 3px 3px 0px 0px;
 	display: block;
 	float: left;
 	padding: 5px 10px;
 	text-decoration: none;
 	text-transform: uppercase;
-	border-right: 10px solid #fff;
-	
 }
 
 /* Navigation link states */
