removed tone-box from search page

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -104,7 +104,7 @@
 </div>
 
 <!--***************ARIA MARKER 'MAIN'***************-->
-<main id="main" class="tone-box" role="main">
+<div role="main">
 
 <!-- Begin content -->
 
@@ -172,7 +172,7 @@
   
 
 <!-- End content -->
-    </main>
+</div>
 
 </div> <!-- container -->
 
