Revert "removed tone-box from search page"
This reverts commit b19f6bf2bbd588068c12518bf1ae095a4ac04672.

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -104,7 +104,7 @@
 </div>
 
 <!--***************ARIA MARKER 'MAIN'***************-->
-<div role="main">
+<main id="main" class="tone-box" role="main">
 
 <!-- Begin content -->
 
@@ -172,7 +172,7 @@
   
 
 <!-- End content -->
-</div>
+    </main>
 
 </div> <!-- container -->
 
