removed tone-box

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -127,7 +127,7 @@
     <tr>
      <td valign="top">
 
-      <div id="AVnotice" class="tone-box">
+      <div id="AVnotice">
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle"/>
 	    
