trial removing tone box from main

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -104,7 +104,7 @@
 </div>
 
 <!--***************ARIA MARKER 'MAIN'***************-->
-<main id="main" class="tone-box" role="main">
+<main id="main" class="" role="main">
 
 <!-- Begin content -->
 
@@ -116,7 +116,7 @@
 </script>
 -->
 
-  <div id="switchmenu" style="display: none">
+  <div id="switchmenu" class="tone-box" style="display: none">
    <a href="#" onclick="switchView('recordview')">Record Browser</a>
    <span> | </span>
    <a href="#" onclick="switchView('targetview')">Target Info</a>
