--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -512,13 +512,13 @@ div.login input {
 	padding: .8em;
 }
 /*------------------------------------------------------*/
-#main.tone-box .details #detTable {
+#main .details #detTable {
     border: 1px solid #000000;
     border-radius: 10px;
     padding: 1em;
 }
 
-#main.tone-box .details table.secondary_info {
+#main .details table.secondary_info {
     display: none;
 	background-color: #ffffba;
 	font-size: .7em;
