--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -512,30 +512,33 @@ div.login input {
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
-#results {
+#main #results {
 	background-color: red;
 	padding: 0;
 	margin: 0;
+	border: 0;
 }
 
-#detTable {
+#main #detTable {
     border: 1px solid #000000;
     border-radius: 10px;
     padding: 1em;
     margin: 0;
 }
-.details {
+#main .details {
 	background-color: green;
 	padding: 0;
 	margin: 0;
+	border: 0;
 }
-.secondary_info {
+#main .secondary_info {
     display: none;
 	background-color: #ffffba;
 	font-size: .7em;
 	color: #505050;
 	padding-right: 0;
 	margin: 0;
+	border: 0;
 }
 
 /*------------------------------------------------------*/
