--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -512,31 +512,19 @@ div.login input {
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
-#main #results {
-	background-color: red;
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-
-#main #detTable {
+.details {
     border: 1px solid #000000;
     border-radius: 10px;
     padding: 1em;
     margin: 0;
 }
-#main .details {
-	background-color: green;
-	padding: 0;
-	margin: 0;
-	border: 0;
-}
-#main .secondary_info {
+
+.secondary_info {
     display: none;
 	background-color: #ffffba;
 	font-size: .7em;
 	color: #505050;
-	padding-right: 0;
+	padding: 0;
 	margin: 0;
 	border: 0;
 }
