re-added tone-box to main

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -104,7 +104,7 @@
 </div>
 
 <!--***************ARIA MARKER 'MAIN'***************-->
-<main id="main" class="" role="main">
+<main id="main" class="tone-box" role="main">
 
 <!-- Begin content -->
 
