--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -519,7 +519,7 @@ div.login input {
     margin: 0;
 }
 
-.secondary_info {
+table.secondary_info {
     display: none;
 	background-color: #ffffba;
 	font-size: .7em;
