Revert "table.secondary_info"
This reverts commit a811078bbe0152cc5815611562eb6417a8c640fc.

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -519,7 +519,7 @@ div.login input {
     margin: 0;
 }
 
-table.secondary_info {
+.secondary_info {
     display: none;
 	background-color: #ffffba;
 	font-size: .7em;
