--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -116,7 +116,7 @@
 </script>
 -->
 
-  <div id="switchmenu" class="tone-box" style="display: none">
+  <div id="switchmenu" style="display: none">
    <a href="#" onclick="switchView('recordview')">Record Browser</a>
    <span> | </span>
    <a href="#" onclick="switchView('targetview')">Target Info</a>
