--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -513,20 +513,15 @@ div.login input {
 /*-------SEARCH RESULTS STYLES-----------------*/
 
 .details {
-    border: 1px solid #000000;
-    border-radius: 10px;
-    padding: 1em;
-    margin: 0;
+/*styles moved to fill_client-public.js*/
 }
 
 .secondary_info {
-    display: none;
-	background-color: #ffffba;
-	font-size: .7em;
-	color: #505050;
-	padding: 0;
-	margin: 0;
-	border: 0;
+/*styles moved to fill_client-public.js*/
+}
+
+.primary_info {
+	border: 1px solid #505050; border-radius: 10px; padding: 1em;
 }
 
 /*------------------------------------------------------*/
