--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -520,7 +520,7 @@ div.login input {
 /*styles moved to fill_client-public.js*/
 }
 
-.primary_info {
+#primary table.primary_info {
 	border: 1px solid #505050; border-radius: 10px; padding: 1em;
 }
 
