--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -512,15 +512,12 @@ div.login input {
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
-.details {
-/*styles moved to fill_client-public.js*/
-}
 
 .secondary_info {
 /*styles moved to fill_client-public.js*/
 }
 
-#primary table.primary_info {
+.record .details {
 	border: 1px solid #505050; border-radius: 10px; padding: 1em;
 }
 
