--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -247,7 +247,7 @@ nav li a:active {
 .tone-box 
 {
 	background: #f3f3f3;
-	border-bottom: 3px solid  #c9c9c9;  
+	/*border-bottom: 3px solid  #c9c9c9;  */
 }
 
 .lighter-box {
@@ -519,6 +519,10 @@ div.login input {
 
 .record .details {
 	border: 1px solid #505050; border-radius: 10px; padding: 1em;
+}
+
+.primary_info {
+	border: 1px solid #505050; border-radius: 10px; padding: 1em; background-color: red;
 }
 
 /*------------------------------------------------------*/
