--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -214,7 +214,7 @@ nav li a:active {
 	margin-bottom: 1.5em;
 	margin-top: 1em;
 	display: inline;
-  	padding: ; 
+  	padding: 0px; 
 }
 
 
@@ -236,7 +236,7 @@ nav li a:active {
 	min-width: 200px;
 	margin-bottom: 1.5em;
 	display: inline;
-  	padding: 1.25em;
+  	padding: 0px;
   	font-size: 1.2em; 
 }
 
