--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -171,7 +171,7 @@ nav li a:active {
 	width: 18%;
 	margin-bottom: 1.5em;
 	display: inline;
-  	padding: 0px; 
+  	padding: 1em; 
 }
 
 #main-info-left
