border bottom back on tone box

--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -243,7 +243,7 @@ nav li a:active {
 .tone-box 
 {
 	background: #f3f3f3;
-	/*border-bottom: 3px solid  #c9c9c9;  */
+	border-bottom: 3px solid  #c9c9c9;
 }
 
 .lighter-box {
