updated ing description

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -6,7 +6,7 @@
 <div id="container">
 
   <div id="aside-img-left">
-        <img src='/img/library-dude.png' alt="picture of a man in a library"/>
+        <img src='/img/library-dude.png' alt="picture of an older man in a library"/>
   </div>
 
   <div id="main-info-right" class="tone-box">
