added sign up image

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -73,6 +73,9 @@ $('document').ready(function(){
 </script>
 
 <div id="container">
+  <div id="aside">
+    <img src="img/sign-up.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
+  </div>
   <div id="main">
 
       <div id="waitDiv">
