added img link and updated name to match

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -44,7 +44,7 @@
 
 <script type="text/javascript">
   $('document').ready(function(){
-    $("#image").append("<img src=/img/holmesprofile2.png>");
+    $("#image").append("<img src=/img/welcome-library.JPG>");
 
     $("#query").focus();
   });
