--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -129,7 +129,7 @@
 
       <div id="AVnotice">
 
-	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle"/>
+	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
 	    
 	      <p>Note that, while items of all types (DVD, CD, etc) may be listed, individual libraries may not allow interlibrary loan of audiovisual matierial at this time.</p>
 
