aside ing left added

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -73,9 +73,10 @@ $('document').ready(function(){
 </script>
 
 <div id="container">
-  <div id="aside">
+  <div id="aside-img-left">
     <img src="img/sign-up.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
   </div>
+
   <div id="main">
 
       <div id="waitDiv">
