updated img name

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -73,8 +73,8 @@ $('document').ready(function(){
 </script>
 
 <div id="container">
-  <div id="aside-img-left">
-    <img src="img/sign-up.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
+  <div id="aside">
+    <img src="img/registration.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
   </div>
 
   <div id="main">
