chaging layout of registration page

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -73,11 +73,11 @@ $('document').ready(function(){
 </script>
 
 <div id="container">
-  <div id="aside">
+  <div id="aside-img-left">
     <img src="img/registration.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
   </div>
 
-  <div id="main">
+  <div id="main-info-right">
 
       <div id="waitDiv">
         Loading... <img src="/wait.gif">
