added tone box test

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -77,7 +77,7 @@ $('document').ready(function(){
     <img src="img/registration.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
   </div>
 
-  <div id="main-info-right">
+  <div id="main-info-right" class="tone-box">
 
       <div id="waitDiv">
         Loading... <img src="/wait.gif">
