--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -91,7 +91,7 @@ $('document').ready(function(){
       </div>
     <p> </p>
 
-    <div id="registration" style="display:none; clear:both; border: 1px solid #000">
+    <div id="registration" style="display:none; clear:both;">
       <br/>
       <h2>Registration form</h2>
       <form id="registration_form" action="/cgi-bin/register-patron.cgi" method="POST">
